@@ -149,8 +149,9 @@ cmd_cable_complete (urj_chain_t *chain, char ***matches, size_t *match_cnt,
                                              urj_tap_cable_drivers[i]->name);
         break;
     case 2:
-        /* XXX: in the future, we want to complete cable options too */
         urj_completion_mayben_add_match (matches, match_cnt, text, text_len, "help");
+        urj_completion_mayben_add_param_list (matches, match_cnt, text,
+                                              text_len, urj_cable_param_list);
         break;
     }
 }
